--- a/TitanicMachineLearning.ipynb
+++ b/TitanicMachineLearning.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjpalmaYEuCWoInQlnZ489",
+      "authorship_tag": "ABX9TyPJ+7R9qunkPccJFaPLK3Wo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2464,16 +2464,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BjjjOyaq5W-l",
-        "colab_type": "text"
-      },
-      "source": [
-        "# K-Fold Method"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "PixrC4ygAz_u",
@@ -2561,17 +2551,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "q3_782t0B_er",
-        "colab_type": "code",
-        "colab": {}
+        "id": "u8pPQMBdn9jp",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "# Model Fit"
+      ]
     },
     {
       "cell_type": "code",
@@ -3011,6 +2998,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y2q9Pq79oCWe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Model Save"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yzKHwIGPDyoM",
@@ -3038,6 +3035,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AmNVaYDSoFai",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Model Load"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "isZ82O-iFJaa",
@@ -3063,6 +3070,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8TgyRh-KoMsT",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Evaluate Test Dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -3122,6 +3139,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U5cm_0TQoZHl",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Predict Test DataSet"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "8QMgD9ULz5MA",
@@ -3158,460 +3185,95 @@
       "metadata": {
         "id": "8hJW77Qy5jJn",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "e838b3fe-2ea1-412e-ec09-63354a27577f"
+        "colab": {}
       },
       "source": [
-        "pred"
+        "preddf = pd.DataFrame({\"Survived\":pred})"
       ],
-      "execution_count": 109,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 1,\n",
-              " 0,\n",
-              " 1,\n",
-              " 0,\n",
-              " 0,\n",
-              " 0]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 109
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JPin7GLW8S6w",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "bd1cb448-0105-4886-9c53-9c935a0d3d6a"
       },
       "source": [
-        ""
+        "preddf.head()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Survived</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Survived\n",
+              "0         0\n",
+              "1         1\n",
+              "2         0\n",
+              "3         0\n",
+              "4         1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 114
+        }
+      ]
     },
     {
       "cell_type": "code",
